--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Megaman!
+This project was done in 2011. Decided to use my spare time to learn about Unity3D and what better way to learn than by recreating a part of one of your favorite games? Megaman 2 is a classic platform game by Capcom which was released in 1988. This is without a doubt one of my favorite games of all time and countless hours of my childhood were spent on destroying robots made by the evil Dr.Wily.
+
+I decided to recreate the airman stage from Megaman 2 (Walkthrough on youtube). The game was initially created on Unity3D 4.0 using C#. The graphics used in this game were found on various sprite websites. 
